@@ -7,6 +7,12 @@ using `glibc' in the "product" field.
 
 Version 2.35.1
 
+Deprecated and removed features, and other changes affecting compatibility:
+
+* The function getdirentries is now deprecated, applications should use
+  either getdents64, readdir64 or readdir.
+
+
 The following bugs are resolved with this release:
 
   [28850] linux: __get_nprocs_sched reads uninitialized memory from the stack
